# jni-rs

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HelloWorld.java  LICENSE-MIT  README.md  build.rs  build_profile  clippy.toml  pom.xml  run_all_tests.sh  run_integration_tests.sh  run_leaking_test.sh  rustfmt.toml  test_profile  tests_profile.sh
book/projects/completed/jnibookrs/: Cargo.toml  sanity_check_book.sh
book/projects/completed/jnibookrs/src/: charts.rs  counter.rs  division.rs  error.rs  lib.rs  verifylink.rs
crates/javac/: CHANGELOG.md  Cargo.toml  README.md
crates/javac/src/: lib.rs
crates/jbindgen/: Cargo.toml  README.md  build.rs
crates/jbindgen/android-test-activity/: .gitignore  Cargo.toml  README.md  build.gradle  build.rs  settings.gradle
crates/jbindgen/android-test-activity/app/: build.gradle
crates/jbindgen/android-test-activity/src/: lib.rs
crates/jbindgen/android-test-activity/src/sdk/: bluetooth.rs  content_intent.rs  mod.rs  net_uri.rs  os_binder.rs  os_build.rs  util_time_utils.rs
crates/jbindgen/android-test-activity/tests/: android_test_activity.rs
crates/jbindgen/annotations/: PUBLISHING.md  README.md  build.sh  pom.xml
crates/jbindgen/docs/: cafebabe.md
crates/jbindgen/examples/: basic.rs
crates/jbindgen/examples/java/: HelloWorld.java
crates/jbindgen/src/: android.rs  android_sdk.rs  cafebabe_parser.rs  error.rs  generator.rs  java_parser.rs  lib.rs  parser_types.rs
crates/jbindgen/tests/: android_jar.rs  android_sdk.rs  android_test_activity.rs  annotations.rs  generate.rs  jar_tests.rs  runtime_tests.rs  type_map_test.rs
crates/jbindgen/tests/java/: AnnotationTest.java  AwkwardNames.java  Calculator.java  NameCollisionTest.java  NativeMethodVisibility.java  NoPackage.java  OuterClass.java  Overloads.java  RustActivity.java  RustPrimitiveTest.java  RustSkipTest.java  SimpleClass.java  WithDependencies.java  WithDocumentation.java  WithFields.java  WithNative.java
crates/jni/: Cargo.toml  build.rs
crates/jni/benches/: api_calls.rs
crates/jni/docs/: 0.21-MIGRATION.md  0.22-MIGRATION.md
crates/jni/docs/macros/: bind_java_type_0_overview.md  bind_java_type_1_properties.md  bind_java_type_2_examples.md  bind_java_type_3_advanced.md  jni_mangle.md  jni_sig.md  jni_str.md  native_method.md
crates/jni/example/: Makefile
crates/jni/examples/: as_ref_cast.rs  bind_java_type.rs  bind_java_type_hooks.rs  bind_java_type_is_instance_of.rs  bind_java_type_wrapper.rs  jni_sig.rs  jni_sig_wrapper.rs  jni_str.rs  native_method.rs  native_method_wrapper.rs
crates/jni/examples/utils/: lib.rs
crates/jni/mylib-example/: HelloWorld.h  HelloWorld.java
crates/jni/mylib-example/mylib/: Cargo.toml
crates/jni/mylib-example/mylib/src/: lib.rs
crates/jni/src/: env.rs  errors.rs  exceptions.rs  jvalue.rs  lib.rs  macros.rs  signature.rs  version.rs  windows_sys.rs
crates/jni/src/descriptors/: desc.rs  exception_desc.rs  field_desc.rs  method_desc.rs  mod.rs
crates/jni/src/elements/: auto_elements.rs  auto_elements_critical.rs  mod.rs
crates/jni/src/errors/: policy.rs
crates/jni/src/ids/: jfieldid.rs  mod.rs
crates/jni/src/objects/: jbytebuffer.rs  jchar_sequence.rs  jclass.rs  jclass_loader.rs  jcollection.rs  jiterator.rs  jlist.rs  jmap.rs  jobject.rs  jobject_array.rs  jprimitive_array.rs  jset.rs  jstack_trace_element.rs  jstring.rs  jthread.rs  jthrowable.rs  mod.rs  type_array.rs
crates/jni/src/refs/: auto.rs  cast.rs  global.rs  loader_context.rs  mod.rs  reference.rs  weak.rs
crates/jni/src/strings/: ffi_str.rs  mutf8_chars.rs
crates/jni/src/vm/: fls_attach_guard.rs  init_args.rs  java_vm.rs  mod.rs  tls_attach_guard.rs
crates/jni/src/vm/init_args/: char_encoding_generic.rs  char_encoding_windows.rs
crates/jni/tests/: bind_arrays.rs  bind_doc_attributes.rs  bind_fields.rs  bind_methods.rs  bind_minimal.rs  bind_native_methods.rs  bind_native_methods_abi_check.rs  bind_native_methods_catch_unwind.rs  bind_native_methods_export.rs  bind_native_methods_export_x_raw_x_fn.rs  bind_native_methods_static_init.rs  bind_native_methods_utils.rs  bind_runtime_type_checks.rs  bind_visibility.rs  bind_with_assert_top.rs  bind_with_multiple_type_maps.rs  builtin_bindings.rs  exception_safe_calls.rs  get_rust_field_ergonomics.rs  invocation_character_encoding.rs  java_integers.rs  jlist.rs  jmap.rs  jni_api.rs  jni_global_refs.rs  jni_weak_refs.rs  native_methods.rs  native_methods_abi_check.rs  native_methods_catch_unwind.rs  native_methods_export.rs  native_methods_export_x_raw_x_fn.rs  native_methods_register.rs  native_methods_utils.rs  signature.rs  string-macros.rs  test_generated_aliases.rs  threads_atomic_int_proxy.rs  threads_attach_config.rs  threads_detach.rs  trybuild.rs  (+1 more)
crates/jni/tests/ui/fail/: auto-elements-lifetime.stderr  with-local-frame-borrow-mut-env.rs
crates/jni/tests/util/: example_proxy.rs  mod.rs
java-testlib/: Cargo.toml
java-testlib/src/: lib.rs
javac/: CHANGELOG.md  Cargo.toml
javac/src/: lib.rs
javac/tests/: compilation.rs
javac/tests/java/com/example/: Foo.java  SimpleClass.java
jni-macros/: Cargo.toml
jni-macros/docs/: bind_java_type_advanced.md  bind_java_type_examples.md  bind_java_type_properties.md
jni-macros/examples/: bind_java_type.rs  bind_java_type_hooks.rs  bind_java_type_is_instance_of.rs  bind_java_type_wrapper.rs  jni_str.rs  native_method.rs  native_method_wrapper.rs
jni-macros/examples/java/com/example/: BindJavaTypeOverview.java  BindJavaTypeWrapper.java
jni-macros/examples/utils/: lib.rs
jni-macros/src/: bind_java_type.rs  lib.rs  mangle.rs  native_method.rs  signature.rs  str.rs  types.rs
jni-macros/tests/: bind_arrays.rs  bind_fields.rs  bind_minimal.rs  bind_native_methods.rs  bind_native_methods_utils.rs  bind_runtime_type_checks.rs  bind_with_multiple_type_maps.rs  native_method_array.rs  native_methods.rs  native_methods_abi_check.rs  native_methods_export.rs  native_methods_register.rs  native_methods_utils.rs  string.rs  trybuild.rs
jni-macros/tests/util/: mod.rs
(+425 files in other folders)
