[package]
authors = ["Josh Chase <josh@prevoty.com>"]
description = "Rust bindings to the JNI"
documentation = "https://docs.rs/jni"
readme = "README.md"
keywords = ["ffi", "jni", "java"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
name = "jni"
repository = "https://github.com/jni-rs/jni-rs"
# ¡When bumping version please also update it in examples and documentation!
version = "0.21.1"
edition = "2021"
# Keep in sync with ci.yml
rust-version = "1.77.0"
exclude = [
    "/.github",
    "/benches",
    "/docs",
    "/example",
    "/tests",
    "/test_profile",
]

[[bench]]
name = "api_calls"
harness = false

[dependencies]
cfg-if = "1.0.0"
cesu8 = "1.1.0"
combine = "4.1.0"
jni-sys = "0.4"
log = "0.4.4"
once_cell = "1.19.0"
static_assertions = "1"
thiserror = "2"
paste = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
libloading = { version = "0.8", optional = true }
java-locator = { version = "0.1.3", optional = true }

[build-dependencies]
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
assert_matches = "1.5.0"
lazy_static = "1"
rusty-fork = "0.3.0"
trybuild = "1.0.0"

[target.'cfg(windows)'.dev-dependencies]
bytemuck = "1.13.0"

[features]
invocation = ["dep:java-locator", "dep:libloading"]
default = []

[package.metadata.docs.rs]
features = ["invocation"]
