[workspace]
members = ["crates/*"]
exclude = ["crates/jni-gen-windows-bindings"]

[workspace.package]
# Keep in sync with ci.yml
rust-version = "1.85.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["jni team"]
repository = "https://github.com/jni-rs/jni-rs"


[workspace.dependencies]
jni-macros = { path = "./crates/jni-macros", version = "0.22.0" }
javac = { path = "./crates/javac", version = "0.1.0" }
jni = { path = "./crates/jni", version = "0.21.1" }

jni-sys = "0.4"

log = "0.4.4"
thiserror = "2"
libloading = "0.8"
java-locator = "0.1.3"
cafebabe = "0.9"

trybuild = "1"
rusty-fork = "0.3.0"
