[package]
name = "javac"
description = """
A build-time dependency for Cargo build scripts and unit tests to assist in
invoking the native Java compiler to compile Java source files into class files.
"""
documentation = "https://docs.rs/javac"
readme = "README.md"
keywords = ["build-dependencies", "java"]
categories = ["development-tools::build-utils"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jni-rs/jni-rs"
version = "0.1.0"
edition = "2024"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs"]

[dependencies]
which = "8"
thiserror = "2"

[dev-dependencies]
jni = { path = "../", version = "0.21.0", features = ["invocation"] }
rusty-fork = "0.3.0"
cafebabe = "0.9"
encoding_rs = "0.8.35"
