[package]
name = "jni-macros"
version = "0.1.0"
description = "Procedural macros for the jni crate"
keywords = ["jni", "java", "jvm", "android", "ndk"]
categories = ["api-bindings", "development-tools::procedural-macro-helpers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jni-rs/jni-rs"
edition = "2024"
include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "build.rs",
    "src/**",
    "examples/**",
]

[lib]
proc-macro = true

[build-dependencies]
rustc_version = "0.4"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
jni = { path = "../", version = "0.21.0", features = ["invocation"] }
