[package]
name = "jnibookrs"
version = "0.1.0"
authors = [""]
edition = "2018"
publish = false

[dependencies]
jni = "0.19"
lazy_static = "1.4"
plotlib = "0.5"
anyhow = "1.0"

[lib]
crate_type = ["cdylib"]

[profile.release]
debug = true
lto = true

[features]
division_0 = []
division_1 = []
division_2 = []
division_3 = []
division_complete = []
link_0 = []
link_complete = []
counter_discussion = []
